# LWPC

LWPCv21/: CMakeLists.txt  VTX-Tripura.inp  rexp.inp
LWPCv21/Profile/: VTX-Tripura.ndx
LWPCv21/data/: CMakeLists.txt  unf_coas.for  xmtr.lis
LWPCv21/lib/: CMakeLists.txt  lwpc_error.for  read_lwf.for
